distance-based power instead of time, crouch when charging, code to move mouse to player when start charging (commented out)

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ open_scenes=["res://Scenes/Game.tscn"]
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/ViewportCamera.gd"]
-open_help=["@GlobalScope", "AnimatedSprite2D", "Node"]
+open_help=["DisplayServer", "@GlobalScope", "AnimatedSprite2D", "Input", "Node"]
 script_split_offset=140
 list_split_offset=0
 
