--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Game.tscn"]
+open_scenes=[]
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/ViewportCamera.gd"]
-open_help=["DisplayServer", "@GlobalScope", "AnimatedSprite2D", "Input", "Node"]
+open_help=["@GlobalScope", "AnimatedSprite2D", "DisplayServer", "Input"]
 script_split_offset=140
 list_split_offset=0
 
