--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=763
+dock_hsplit_2=665
 dock_hsplit_3=-555
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=[]
+open_scenes=["res://Scenes/Game.tscn"]
 
 [ScriptEditor]
 
