slowmo and 16x16 tiles added

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 14,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 45,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 0,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 315,
-"scroll_position": 295.0,
-"selection": false,
+"row": 15,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 15,
+"selection_to_column": 29,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -31,10 +35,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 24,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 4,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -64,6 +68,20 @@ state={
 "h_scroll_position": 0,
 "row": 3,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Spikey.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 37,
+"scroll_position": 37.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
