--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Game.tscn"]
+open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Interactables/Spikey.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/ViewportCamera.gd"]
-open_help=["@GlobalScope", "AnimatedSprite2D", "DisplayServer", "Input"]
+open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd", "res://Scripts/ViewportCamera.gd"]
+open_help=["@GlobalScope", "AnimatedSprite2D", "Engine"]
 script_split_offset=140
 list_split_offset=0
 
