beginning of attack

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,8 +20,8 @@ open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Interactables/Spikey.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd", "res://Scripts/ViewportCamera.gd"]
-open_help=["@GlobalScope", "AnimatedSprite2D", "Engine"]
+open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Football.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd", "res://Scripts/ViewportCamera.gd"]
+open_help=["@GDScript", "@GlobalScope", "AnimatedSprite2D", "Array", "Engine", "float", "PropertyTweener", "Resource", "Tween"]
 script_split_offset=140
 list_split_offset=0
 
