--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 7.0,
+"row": 46,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 84,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 15,
-"selection_to_column": 29,
-"selection_to_line": 16,
+"row": 267,
+"scroll_position": 256.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 11,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 5,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -82,6 +78,20 @@ state={
 "h_scroll_position": 0,
 "row": 37,
 "scroll_position": 37.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Football.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 32,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
