--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=665
-dock_hsplit_3=-555
+dock_hsplit_3=-432
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Interactables/Spikey.tscn"]
+open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Interactables/Football.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Football.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd", "res://Scripts/ViewportCamera.gd"]
-open_help=["@GDScript", "@GlobalScope", "AnimatedSprite2D", "Array", "Engine", "float", "PropertyTweener", "Resource", "Tween"]
+open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Football.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd"]
+open_help=[]
 script_split_offset=140
 list_split_offset=0
 
