--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 18,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 22.0,
+"row": 24,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 84,
+"column": 11,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 267,
-"scroll_position": 256.0,
+"row": 375,
+"scroll_position": 285.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +77,7 @@ state={
 "folded_lines": [],
 "h_scroll_position": 0,
 "row": 37,
-"scroll_position": 37.0,
+"scroll_position": 40.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +87,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 19,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 11,
+"row": 8,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 8,
+"selection_to_column": 19,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
