Slomo improved at jonty's

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Interactables/Football.tscn"]
+open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Interactables/Football.tscn", "res://Scenes/Interactables/Cannon.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Football.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd"]
-open_help=[]
+open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Cannon.gd", "res://Scripts/Football.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd"]
+open_help=["Node", "Tween"]
 script_split_offset=140
 list_split_offset=0
 
