--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": [],
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 9.0,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 23,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 375,
-"scroll_position": 285.0,
+"row": 373,
+"scroll_position": 362.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 17,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 18,
+"row": 2,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,12 +73,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 6,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 40.0,
-"selection": false,
+"row": 51,
+"scroll_position": 42.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 51,
+"selection_to_column": 6,
+"selection_to_line": 51,
 "syntax_highlighter": "GDScript"
 }
 
@@ -87,15 +91,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 18,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 8,
+"row": 13,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 8,
-"selection_to_column": 19,
-"selection_to_line": 8,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Cannon.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 6.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
