--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 5,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 27.0,
+"row": 18,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 153,
 "folded_lines": [],
-"h_scroll_position": 0,
-"row": 373,
-"scroll_position": 362.0,
+"h_scroll_position": 868,
+"row": 109,
+"scroll_position": 95.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,16 +73,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 29,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 51,
-"scroll_position": 42.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 51,
-"selection_to_column": 6,
-"selection_to_line": 51,
+"row": 25,
+"scroll_position": 21.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -109,7 +105,7 @@ state={
 "folded_lines": [],
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
