--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://Scenes/Game.tscn", "res://Scenes/Interactables/Football.tscn
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Camera2D.gd", "res://Scripts/Cannon.gd", "res://Scripts/Football.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd"]
+open_scripts=["res://Scripts/Bat.gd", "res://Scripts/Camera2D.gd", "res://Scripts/Cannon.gd", "res://Scripts/Chunk.gd", "res://Scripts/Fan.gd", "res://Scripts/FanArrow.gd", "res://Scripts/Football.gd", "res://Scripts/Game.gd", "res://Scripts/Global.gd", "res://Scripts/Player.gd", "res://Scripts/Spikey.gd"]
 open_help=["Node", "Tween"]
 script_split_offset=140
 list_split_offset=0
